[package]
name = "caden-blog"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.7.7"
maud = "0.26.0"
tokio = { version = "1.41.0", features = ["rt-multi-thread"] }
serde = { version = "1.0.214", features = ["derive"] }
tower = "0.5.1"
chrono = { version = "0.4.38", features = ["serde"] }
serde_json = "1.0"
pulldown-cmark = "0.12.2"
hyper = "1.5.0"
chrono-tz = "0.10.4"
axum-extra = { version = "0.10.1", features = ["cookie"] }
